Bug 312954 - Save Attachments also saves S/MIME signature
Summary: Save Attachments also saves S/MIME signature
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git (master)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-09 15:39 UTC by Allen Winter
Modified: 2013-01-09 19:25 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Allen Winter 2013-01-09 15:39:44 UTC
Save Attachments in the reader window saves the smime.p7s signature file too.
No need to save that.

Reproducible: Always

Steps to Reproduce:
1. Receive an S/MIME signed message with at least 1 attachment
2. In the reader, select "Save Attachments"
3. save somewhere

Actual Results:  
notice that a smime.p7s file is also saved

Expected Results:  
no need to save smime.p7s file

not saved smime.p7s
Comment 1 Laurent Montel 2013-01-09 17:18:58 UTC
I will fix it soon.
Comment 2 Laurent Montel 2013-01-09 19:25:21 UTC
Git commit f2fe351b2503f49330fdf483bb3f3ced39cb9efb by Montel Laurent.
Committed on 09/01/2013 at 20:24.
Pushed by mlaurent into branch 'KDE/4.10'.

Fix Bug 312954 - Save Attachments also saves S/MIME signature

FIXED-IN: 4.10

M  +4    -2    messageviewer/util.cpp

http://commits.kde.org/kdepim/f2fe351b2503f49330fdf483bb3f3ced39cb9efb