Fix Bug 312954 - Save Attachments also saves S/MIME signature

FIXED-IN: 4.10
BUG: 312954